--- a/tokenApi/package.json
+++ b/tokenApi/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0"
   }
 }
